--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -27,4 +27,4 @@ jobs:
     - name: Build with Gradle
       run: ./gradlew build
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)   
+      run: docker build . --file src/main/docker/Dockerfile --tag my-image-name:$(date +%s)   
